# qaros

./: .clang-format  .clang-tidy.yaml  .clangd  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
.claude/features/: qaros-c-api-documentation.md
.github/workflows/: docs-website.yml
cmake/: vcpkg-toolchain.cmake
docs/: TODO.md
docs/website/: .gitignore  README.md  docusaurus.config.ts  doxygen2docusaurus.json  nodemon-doxygen.json  package-lock.json  package.json  sidebar_api.ts  sidebars.ts
docs/website/blog/: authors.yml  tags.yml
docs/website/docs/: glossary.md  intro.md
docs/website/docs/developer-guide/: _category_.json  api-conventions.md  api-conventions.mdx  app-volumes.mdx  concepts.md  coordinate-systems.md  getting-started.md  getting-started.mdx  gui-panels.mdx  language-bindings.md  language-bindings.mdx  onboarding-and-sessions.mdx  peers.md  peers.mdx  rendering-streams.mdx  troubleshooting.md  troubleshooting.mdx
docs/website/docs/operator-guide/: _category_.json  installation.md  maintenance-and-updates.md  managing-devices.md  networking-and-federation.md  overview.md  running-the-hub.md  security-model.md  system-requirements.md  the-mixer.md
docs/website/docs/user-guide/: _category_.json  connection-panel.md  coordinate-systems.md  deployment-and-installation.md  getting-started.md  onboarding-devices.md  qaros-world.md  security-and-onboarding.md  (+5 more)
docs/website/scripts/: download-doxygen.js  doxygen-paths.js  doxygen-release.js  doxygen-version.js  render-svg-diagrams.js  run-doxygen.js
qar-streaming-c/: CMakeLists.txt
qar-streaming-c/examples/: .clangd  CMakeLists.txt  app_volume_management.c  common.h  cpu_rendering_visualizer.c  dynamic_loading.c  gui_panel_operations.c  library_dynamic_loading.c  onboarding_and_rejoin.c  session_create_and_join.c
qar-streaming-c/include/: qar_streaming.h
(+24 files in other folders)
